Skip to content

[oss-fuzz 5276364458754048] mkv: segment leak on error

Ref.:

==402==ERROR: LeakSanitizer: detected memory leaks

Direct leak of 96 byte(s) in 2 object(s) allocated from:
    #0 0x564b3c4e6e0d in operator new(unsigned long, std::nothrow_t const&) /src/llvm-project/compiler-rt/lib/asan/asan_new_delete.cpp:114:3
    #1 0x564b3c876628 in mkv::demux_sys_t::PreloadLinked() /src/vlc/modules/demux/mkv/demux.cpp:182:26
    #2 0x564b3c7fd8a7 in mkv::OpenInternal(stream_t*, bool) /src/vlc/modules/demux/mkv/mkv.cpp:258:18
    #3 0x564b3c9c629a in demux_Probe /src/vlc/src/input/demux.c:112:15
    #4 0x564b3c986a20 in vlc_module_load /src/vlc/src/modules/modules.c:230:15
    #5 0x564b3c9c598d in demux_NewAdvanced /src/vlc/src/input/demux.c:196:20
    #6 0x564b3c9c502f in demux_New /src/vlc/src/input/demux.c:77:12
    #7 0x564b3c4e8439 in demux_process_stream /src/vlc/test/src/input/demux-run.c:300:22
    #8 0x564b3c4e80ef in LLVMFuzzerTestOneInput /src/vlc/test/vlc-demux-libfuzzer.c:63:5
    #9 0x564b3c3858bd in fuzzer::Fuzzer::ExecuteCallback(unsigned char const*, unsigned long) /src/llvm-project/compiler-rt/lib/fuzzer/FuzzerLoop.cpp:619:13
    #10 0x564b3c370632 in fuzzer::RunOneTest(fuzzer::Fuzzer*, char const*, unsigned long) /src/llvm-project/compiler-rt/lib/fuzzer/FuzzerDriver.cpp:329:6
    #11 0x564b3c376500 in fuzzer::FuzzerDriver(int*, char***, int (*)(unsigned char const*, unsigned long)) /src/llvm-project/compiler-rt/lib/fuzzer/FuzzerDriver.cpp:865:9
    #12 0x564b3c3a2032 in main /src/llvm-project/compiler-rt/lib/fuzzer/FuzzerMain.cpp:20:10
    #13 0x7d7944df7082 in __libc_start_main /build/glibc-LcI20x/glibc-2.31/csu/libc-start.c:308:16

Samples:

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information