demux: mkv: fix leaking virtual segment on error

Fixes #29289